Added additional items

--- a/src/main/java/assets/modtutorial/lang/en_GB.lang
+++ b/src/main/java/assets/modtutorial/lang/en_GB.lang
@@ -1,1 +1,5 @@
+item.modtutorial:tutorialAxe.name=Tutorial Axe of Awesomeness
+item.modtutorial:tutorialHoe.name=Tutorial Hoe of Awesomeness
+item.modtutorial:tutorialPickaxe.name=Tutorial Pickaxe of Awesomeness
+item.modtutorial:tutorialShovel.name=Tutorial Shovel of Awesomeness
 item.modtutorial:tutorialSword.name=Tutorial Sword of Awesomeness
