Update to forge 1180 and add my own creative tab.

--- a/src/main/java/assets/modtutorial/lang/en_GB.lang
+++ b/src/main/java/assets/modtutorial/lang/en_GB.lang
@@ -1,10 +1,10 @@
-item.modtutorial:tutorialAxe.name=Tutorial Axe of Awesomeness
-item.modtutorial:tutorialHoe.name=Tutorial Hoe of Awesomeness
-item.modtutorial:tutorialIngot.name=Tutorial Ingot of Awesomeness
-item.modtutorial:tutorialPickaxe.name=Tutorial Pickaxe of Awesomeness
-item.modtutorial:tutorialShovel.name=Tutorial Shovel of Awesomeness
-item.modtutorial:tutorialSword.name=Tutorial Sword of Awesomeness
+item.modtutorial:tutorialAxe.name=ModTutorial Axe of Awesomeness
+item.modtutorial:tutorialHoe.name=ModTutorial Hoe of Awesomeness
+item.modtutorial:tutorialIngot.name=ModTutorial Ingot of Awesomeness
+item.modtutorial:tutorialPickaxe.name=ModTutorial Pickaxe of Awesomeness
+item.modtutorial:tutorialShovel.name=ModTutorial Shovel of Awesomeness
+item.modtutorial:tutorialSword.name=ModTutorial Sword of Awesomeness
 
-tile.modtutorial:tutorialDirt.name=Tutorial Dirt of Awesomeness
-tile.modtutorial:tutorialOre.name=Tutorial Ore of Awesomeness
-tile.modtutorial:tutorialStone.name=Tutorial Stone of Awesomeness
+tile.modtutorial:tutorialDirt.name=ModTutorial Dirt of Awesomeness
+tile.modtutorial:tutorialOre.name=ModTutorial Ore of Awesomeness
+tile.modtutorial:tutorialStone.name=ModTutorial Stone of Awesomeness
